users page overflow bug fix

--- a/front-end/src/components/AuthComponents/authForms.css
+++ b/front-end/src/components/AuthComponents/authForms.css
@@ -20,7 +20,7 @@
   background-color: transparent;
   border: transparent;
   border-bottom: 2px solid rgb(4, 73, 73);
-  width: 60vw;
+  width: 30vw;
 }
 
 .form-button {
