--- a/front-end/src/components/Profile/profile.css
+++ b/front-end/src/components/Profile/profile.css
@@ -69,3 +69,13 @@
     margin-right: 0;
   }
 }
+
+.profile-input {
+  width: 40vw;
+}
+
+@media screen and (max-width: 810px) {
+  .profile-input {
+    width: 60vw;
+  }
+}
