--- a/front-end/src/components/users/users.css
+++ b/front-end/src/components/users/users.css
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 680px;
+  height: 100vh;
 }
 
 .scroll {
@@ -50,10 +50,9 @@
 
 .users-page-container {
   display: flex;
-  margin-top: 220px;
+  margin-top: 25vh;
   align-items: center;
   width: 90vw;
-  margin-top: 250px;
 }
 
 .message {
